added information and new background image

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kevinvai.github.io/react-portfolio",
+  "homepage": "https://kevinvai10.github.io/react-portfolio",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.6.0",
