added new uI and new projects

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^2.1.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-particles-js": "^2.7.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
@@ -15,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "aws s3 sync build/ s3://www.meetkevin.com --acl public-read"
   },
   "eslintConfig": {
     "extends": "react-app"
