added correct scripts

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "aws s3 sync build/ s3://www.meetkevin.com --acl public-read"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
