--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://kevinvai10.github.io/react-portfolio",
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "node-sass": "^4.13.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-particles-js": "^2.7.0",
